--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@okam/core-lib": ["libs/core-lib/src/index.ts"],
+      "@okam/stack-ui": ["libs/stack-ui/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
