--- a/apps/demo/project.json
+++ b/apps/demo/project.json
@@ -23,7 +23,8 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "demo:build",
-        "dev": true
+        "dev": true,
+        "hostname": "0.0.0.0"
       },
       "configurations": {
         "development": {
