--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "16.4.2",
     "@nx/eslint-plugin": "16.4.2",
     "@nx/jest": "16.4.2",
     "@nx/js": "16.4.2",
     "@nx/linter": "16.4.2",
     "@nx/react": "16.4.2",
+    "@nx/storybook": "^16.4.2",
+    "@nx/vite": "16.4.2",
     "@nx/workspace": "16.4.2",
+    "@storybook/addon-essentials": "^7.0.24",
+    "@storybook/core-common": "^7.0.24",
+    "@storybook/core-server": "^7.0.24",
+    "@storybook/nextjs": "^7.0.24",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
@@ -26,6 +33,8 @@
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/ui": "^0.32.0",
     "babel-jest": "^29.4.1",
     "cypress": "^12.11.0",
     "eslint": "~8.15.0",
@@ -36,13 +45,35 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "@graphql-eslint/eslint-plugin": "^3.15.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest-formatting": "^3.1.0",
+    "eslint-plugin-playwright": "^0.12.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-regexp": "^1.12.0",
+    "eslint-plugin-tailwindcss": "^3.8.3",
+    "eslint-plugin-testing-library": "^5.10.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
+    "jsdom": "~22.1.0",
     "nx": "16.4.2",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "verdaccio": "^5.0.4",
+    "vite": "^4.3.9",
+    "vite-plugin-dts": "~2.3.0",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.32.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-plugin-storybook": "0.6.12"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
