--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     "vitest": "^0.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-plugin-storybook": "0.6.12"
+    "eslint-plugin-storybook": "0.6.12",
+    "@commitlint/cli": "17.4.2",
+    "@commitlint/config-conventional": "17.4.2"
   },
   "nx": {
     "includedScripts": []
