--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
+    "@commitlint/cli": "17.4.2",
+    "@commitlint/config-conventional": "17.4.2",
+    "@graphql-eslint/eslint-plugin": "^3.15.0",
     "@nx/cypress": "16.4.2",
     "@nx/eslint-plugin": "16.4.2",
     "@nx/jest": "16.4.2",
@@ -38,22 +41,25 @@
     "babel-jest": "^29.4.1",
     "cypress": "^12.11.0",
     "eslint": "~8.15.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "8.1.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "@graphql-eslint/eslint-plugin": "^3.15.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jest-formatting": "^3.1.0",
+    "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-playwright": "^0.12.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-regexp": "^1.12.0",
+    "eslint-plugin-storybook": "0.6.12",
     "eslint-plugin-tailwindcss": "^3.8.3",
     "eslint-plugin-testing-library": "^5.10.0",
+    "husky": "^8.0.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
@@ -68,12 +74,7 @@
     "vite": "^4.3.9",
     "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.32.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-plugin-storybook": "0.6.12",
-    "@commitlint/cli": "17.4.2",
-    "@commitlint/config-conventional": "17.4.2"
+    "vitest": "^0.32.0"
   },
   "nx": {
     "includedScripts": []
