--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "@stack-ui/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "g:lint": "nx run-many --all --target=lint",
+    "storybook": "nx run project-name:storybook",
+    "dev": "nx serve demo",
+    "build": "nx build demo",
+    "postinstall": "is-ci || yarn husky install"
+  },
   "private": true,
   "dependencies": {
     "@nx/next": "16.4.2",
@@ -22,7 +28,7 @@
     "@nx/js": "16.4.2",
     "@nx/linter": "16.4.2",
     "@nx/react": "16.4.2",
-    "@nx/storybook": "^16.4.2",
+    "@nx/storybook": "16.4.2",
     "@nx/vite": "16.4.2",
     "@nx/workspace": "16.4.2",
     "@storybook/addon-essentials": "^7.0.24",
@@ -30,6 +36,7 @@
     "@storybook/core-server": "^7.0.24",
     "@storybook/nextjs": "^7.0.24",
     "@testing-library/react": "14.0.0",
+    "@theunderscorer/nx-semantic-release": "^2.4.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.2.13",
@@ -65,7 +72,7 @@
     "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "16.4.2",
-    "nx-cloud": "latest",
+    "nx-cloud": "16.0.5",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
