--- a/libs/stack-ui/project.json
+++ b/libs/stack-ui/project.json
@@ -5,6 +5,9 @@
   "projectType": "library",
   "tags": [],
   "targets": {
+    "semantic-release": {
+      "executor": "@theunderscorer/nx-semantic-release:semantic-release"
+    },
     "lint": {
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
