feat: added scripts for publishing and building and configured path for semantic release

--- a/libs/stack-ui/package.json
+++ b/libs/stack-ui/package.json
@@ -8,5 +8,11 @@
       "import": "./index.mjs",
       "require": "./index.js"
     }
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "url": "https://github.com/OKAMca/stack.git"
   }
 }
