--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "g:lint": "nx run-many --all --target=lint",
     "storybook": "nx run stack-ui:storybook",
+    "prepublish-stack": "nx run stack-ui:build",
+    "publish-stack": "npm publish dist/libs/stack-ui",
     "dev": "nx serve demo",
     "build": "nx build demo",
     "postinstall": "is-ci || yarn husky install"
@@ -15,7 +17,7 @@
     "@tsed/exceptions": "^6.100.3",
     "dequal": "^2.0.0",
     "isomorphic-dompurify": "0.26.0",
-    "lodash.isequal": "4.5.0",
+    "lodash.isequal": "4.4.0",
     "next": "13.4.1",
     "radash": "10.7.0",
     "react": "18.2.0",
@@ -52,6 +54,7 @@
     "@testing-library/react": "14.0.0",
     "@theunderscorer/nx-semantic-release": "^2.4.0",
     "@types/jest": "^29.4.0",
+    "@types/lodash.isequal": "4.5.5",
     "@types/node": "18.14.2",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
