fix: test with other package name

--- a/libs/stack-ui/package.json
+++ b/libs/stack-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@okam/stack-ui",
+  "name": "@OKAMca/stack-ui",
   "version": "0.0.1",
   "main": "./index.js",
   "types": "./index.d.ts",
