--- a/libs/stack-ui/project.json
+++ b/libs/stack-ui/project.json
@@ -56,5 +56,15 @@
         }
       }
     }
+  },
+  "nxrelease": {
+    "changelog": true,
+    "repositoryUrl": "https://github.com/OKAMca/stack.git",
+    "npm": true,
+    "github": true,
+    "buildTarget": "stack-ui:build:production",
+    "branches": [
+      "main"
+    ]
   }
 }
