--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,9 +50,14 @@ jobs:
         run: yarn install
 
       - name: Semantic Release
-        run: npx nx run stack-ui:semantic-release
+        run: npx nx run-many --target=semantic-release --parallel=false
 
-      - name: Publishing Package
+      - name: Publishing Stack UI Package
         run: yarn publish-stack
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Core UI Semantic Release
+        run: yarn publish-core
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
