--- a/.nxreleaserc.json
+++ b/.nxreleaserc.json
@@ -1,10 +1,3 @@
 {
-  "changelog": true,
-  "npm": true,
-  "github": true,
-  "buildTarget": "stack-ui:build:production",
-  "repositoryUrl": "https://github.com/OKAMca/stack.git",
-  "branches": [
-    "main"
-  ]
+  "repositoryUrl": "https://github.com/OKAMca/stack.git"
 }
