--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "g:lint": "nx run-many --all --target=lint",
     "storybook": "nx run stack-ui:storybook",
     "publish-stack": "yarn npm publish --access public dist/libs/stack-ui",
+    "publish-core": "yarn npm publish --access public dist/libs/core-lib",
     "dev": "nx serve demo",
     "build": "nx build demo",
     "postinstall": "is-ci || yarn husky install"
