--- a/libs/core-lib/project.json
+++ b/libs/core-lib/project.json
@@ -6,7 +6,17 @@
   "tags": [],
   "targets": {
     "semantic-release": {
-      "executor": "@theunderscorer/nx-semantic-release:semantic-release"
+      "executor": "@theunderscorer/nx-semantic-release:semantic-release",
+      "options": {
+        "changelog": true,
+        "npm": true,
+        "github": true,
+        "buildTarget": "core-lib:build:production",
+        "repositoryUrl": "https://github.com/OKAMca/stack.git",
+        "branches": [
+          "main"
+        ]
+      }
     },
     "lint": {
       "executor": "@nx/linter:eslint",
@@ -31,15 +41,5 @@
         }
       }
     }
-  },
-  "nxrelease": {
-    "changelog": true,
-    "npm": true,
-    "github": true,
-    "buildTarget": "core-lib:build:production",
-    "repositoryUrl": "https://github.com/OKAMca/stack.git",
-    "branches": [
-      "main"
-    ]
   }
 }
