--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: default
+name: Semantic Release and Publishing
 
 on:
   workflow_dispatch:
@@ -52,11 +52,19 @@ jobs:
       - name: Semantic Release
         run: npx nx run-many --target=semantic-release --parallel=false
 
+  publish-stack:
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
       - name: Publish Stack UI Package
         run: yarn publish-stack
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+  publish-core:
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
       - name: Publish Core Lib Package
         run: yarn publish-core
         env:
