--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,28 +34,31 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./publishing
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+          scope: '@okam'
+
+      - name: Configure Git
+        shell: bash
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
+      - name: Install dependencies
+        shell: bash
+        run: yarn install
+
       - name: Semantic Release
         run: npx nx run-many --target=semantic-release --parallel=false
 
-  publish-stack:
-    needs: release
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./publishing
-      - name: Publish Stack UI Package
-        run: yarn publish-stack
+      - name: Publish Core Lib Package
+        run: yarn publish-core
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-  publish-core:
-    needs: release
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./publishing
-      - name: Publish Core Lib Package
-        run: yarn publish-core
+      - name: Publish Stack UI Package
+        run: yarn publish-stack
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
