--- a/libs/core-lib/package.json
+++ b/libs/core-lib/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "main": "./index.js",
   "types": "./index.d.ts",
+  "license": "MIT",
   "exports": {
     ".": {
       "import": "./index.mjs",
