--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,8 @@ jobs:
 
       - name: Semantic Release
         run: npx nx run-many --target=semantic-release --parallel=false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish Core Lib Package
         run: yarn publish-core
