--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -1,4 +1,4 @@
-name: Semantic Release
+name: Publishing
 
 on:
   workflow_dispatch:
@@ -20,17 +20,17 @@ on:
         description: 'Environment to run tests against'
         type: environment
         required: true
-  push:
-    branches:
-      - 'main'
-      - 'automatic-release'
+  workflow_run:
+    workflows: [Semantic Release]
+    types:
+      - completed
 permissions:
   contents: write
 env:
   GITHUB_ACTOR: OKAMca
 
 jobs:
-  release:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -50,5 +50,12 @@ jobs:
         shell: bash
         run: yarn install
 
-      - name: Semantic Release
-        run: npx nx run-many --target=semantic-release --parallel=false
+      - name: Publish Core Lib Package
+        run: yarn publish-core
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish Stack UI Package
+        run: yarn publish-stack
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
