--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -30,7 +30,7 @@ env:
   GITHUB_ACTOR: OKAMca
 
 jobs:
-  publish:
+  publish-core:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -57,6 +57,25 @@ jobs:
         run: yarn publish-core
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+  publish-stack:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+          scope: '@okam'
+
+      - name: Configure Git
+        shell: bash
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
+      - name: Install dependencies
+        shell: bash
+        run: yarn install
 
       - name: Build Stack UI
         run: yarn build-stack
