--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "@nx/vite": "16.4.2",
     "@nx/workspace": "16.4.2",
     "@storybook/addon-essentials": "^7.0.24",
+    "@storybook/addon-interactions": "^7.0.26",
+    "@storybook/addon-links": "^7.0.26",
+    "@storybook/addon-styling": "^1.3.2",
     "@storybook/core-common": "^7.0.24",
     "@storybook/core-server": "^7.0.24",
     "@storybook/nextjs": "^7.0.24",
