--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "nx-cloud": "16.0.5",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
+    "swiper": "9.4.1",
     "tailwindcss": "3.2.7",
     "tailwindcss-logical": "^3.0.1",
     "ts-jest": "^29.1.0",
