--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nx/next": "16.4.2",
     "@react-types/shared": "3.19.0",
+    "@swc/helpers": "~0.5.0",
     "@tsed/exceptions": "^6.100.3",
     "add": "^2.0.6",
     "dequal": "^2.0.0",
@@ -48,9 +49,11 @@
     "@nx/js": "16.4.2",
     "@nx/linter": "16.4.2",
     "@nx/react": "16.4.2",
+    "@nx/rollup": "16.4.2",
     "@nx/storybook": "16.4.2",
     "@nx/vite": "16.4.2",
     "@nx/workspace": "16.4.2",
+    "@rollup/plugin-url": "^7.0.0",
     "@storybook/addon-essentials": "^7.0.24",
     "@storybook/addon-interactions": "^7.0.26",
     "@storybook/addon-links": "^7.0.26",
@@ -58,6 +61,9 @@
     "@storybook/core-common": "^7.0.24",
     "@storybook/core-server": "^7.0.24",
     "@storybook/nextjs": "^7.0.24",
+    "@svgr/rollup": "^8.0.1",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.51",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/react": "14.0.0",
     "@theunderscorer/nx-semantic-release": "^2.4.0",
@@ -101,6 +107,7 @@
     "nx-cloud": "16.0.5",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
+    "swc-loader": "0.1.15",
     "tailwindcss": "3.2.7",
     "tailwindcss-logical": "^3.0.1",
     "ts-jest": "^29.1.0",
