--- a/libs/stack-ui/tsconfig.lib.json
+++ b/libs/stack-ui/tsconfig.lib.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": ["node"]
+    "types": ["node", "next"]
   },
   "paths": { "@workspace/*": ["dist/libs/*"] },
   "files": [
