fix: dependancy bug

--- a/libs/stack-ui/package.json
+++ b/libs/stack-ui/package.json
@@ -1,7 +1,14 @@
 {
   "name": "@okam/stack-ui",
   "version": "1.6.0",
+  "main": "./index.js",
   "types": "./index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./index.mjs",
+      "require": "./index.js"
+    }
+  },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
