--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "private": true,
   "dependencies": {
     "@nx/next": "16.4.2",
+    "@react-aria/i18n": "^3.8.1",
     "@react-types/shared": "3.19.0",
     "@swc/helpers": "~0.5.0",
     "@tsed/exceptions": "^6.100.3",
@@ -25,7 +26,7 @@
     "next": "13.4.1",
     "radash": "10.7.0",
     "react": "18.2.0",
-    "react-aria": "3.22.0",
+    "react-aria": "^3.27.0",
     "react-div-100vh": "0.7.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.0",
