--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-use": "17.4.0",
     "tailwind-variants": "^0.1.8",
     "tslib": "^2.3.0",
+    "usehooks-ts": "^2.9.1",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
