--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "private": true,
   "dependencies": {
     "@nx/next": "16.4.2",
+    "@react-aria/focus": "^3.6.1",
     "@react-aria/i18n": "^3.8.1",
     "@react-types/shared": "3.19.0",
     "@swc/helpers": "~0.5.0",
