--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "nx-cloud": "16.0.5",
     "postcss": "8.4.31",
     "prettier": "^2.6.2",
+    "swiper": "9.4.1",
     "swc-loader": "0.1.15",
     "tailwindcss": "3.2.7",
     "tailwindcss-logical": "^3.0.1",
