--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.0",
     "react-i18next": "12.1.5",
-    "react-spring": "9.6.1",
+    "react-spring": "^9.7.3",
     "react-stately": "^3.24.0",
     "react-use": "17.4.0",
     "tailwind-variants": "^0.1.8",
@@ -109,8 +109,8 @@
     "nx-cloud": "16.0.5",
     "postcss": "8.4.31",
     "prettier": "^2.6.2",
-    "swiper": "9.4.1",
     "swc-loader": "0.1.15",
+    "swiper": "9.4.1",
     "tailwindcss": "3.2.7",
     "tailwindcss-logical": "^3.0.1",
     "ts-jest": "^29.1.0",
