chore: upgrade nx and storybook

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@okam/core-lib": ["libs/core-lib/src/index.ts"],
-      "@okam/stack-ui": ["libs/stack-ui/src/index.ts"],
+      "@okam/stack-ui": ["libs/stack-ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
