--- a/package.json
+++ b/package.json
@@ -15,31 +15,31 @@
   },
   "private": true,
   "dependencies": {
-    "@nx/next": "16.4.2",
+    "@nx/next": "17.2.6",
     "@react-aria/focus": "^3.6.1",
     "@react-aria/i18n": "^3.8.1",
     "@react-types/shared": "3.19.0",
-    "@swc/helpers": "~0.5.0",
+    "@swc/helpers": "0.5.3",
     "@tsed/exceptions": "^6.100.3",
     "dequal": "^2.0.0",
     "isomorphic-dompurify": "0.26.0",
     "lodash.isequal": "4.5.0",
-    "next": "13.5.1",
+    "next": "^14.0.4",
     "radash": "10.7.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-aria": "^3.27.0",
     "react-div-100vh": "0.7.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "7.43.0",
     "react-i18next": "12.1.5",
     "react-spring": "^9.7.3",
     "react-stately": "^3.24.0",
     "react-use": "17.4.0",
+    "swiper": "9.4.1",
     "tailwind-variants": "^0.1.8",
     "tslib": "^2.3.0",
     "unlazy": "^0.10.2",
     "usehooks-ts": "^2.9.1",
-    "swiper": "9.4.1",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
@@ -47,49 +47,51 @@
     "@commitlint/cli": "17.4.2",
     "@commitlint/config-conventional": "17.4.2",
     "@graphql-eslint/eslint-plugin": "^3.15.0",
-    "@nx/cypress": "16.4.2",
-    "@nx/eslint-plugin": "16.4.2",
-    "@nx/jest": "16.4.2",
-    "@nx/js": "16.4.2",
-    "@nx/linter": "16.4.2",
-    "@nx/react": "16.4.2",
-    "@nx/rollup": "16.4.2",
-    "@nx/storybook": "16.4.2",
-    "@nx/vite": "16.4.2",
-    "@nx/workspace": "16.4.2",
+    "@nx/cypress": "17.2.6",
+    "@nx/eslint-plugin": "17.2.6",
+    "@nx/jest": "17.2.6",
+    "@nx/js": "17.2.6",
+    "@nx/linter": "17.2.6",
+    "@nx/react": "17.2.6",
+    "@nx/rollup": "17.2.6",
+    "@nx/storybook": "17.2.6",
+    "@nx/vite": "17.2.6",
+    "@nx/workspace": "17.2.6",
     "@rollup/plugin-url": "^7.0.0",
-    "@storybook/addon-essentials": "^7.0.24",
-    "@storybook/addon-interactions": "^7.0.26",
-    "@storybook/addon-links": "^7.0.26",
+    "@storybook/addon-links": "7.6.6",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/core-server": "^7.5.3",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/nextjs": "^7.5.3",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@storybook/addon-styling": "^1.3.2",
-    "@storybook/core-common": "^7.0.24",
-    "@storybook/core-server": "^7.0.24",
-    "@storybook/nextjs": "^7.0.24",
     "@svgr/rollup": "^8.0.1",
     "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.51",
+    "@swc/core": "1.3.101",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/react": "14.0.0",
     "@theunderscorer/nx-semantic-release": "^2.4.0",
     "@types/jest": "^29.4.0",
     "@types/lodash.isequal": "4.5.5",
-    "@types/node": "18.14.2",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "@vitest/ui": "^0.32.0",
+    "@types/node": "18.16.9",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@typescript-eslint/parser": "6.15.0",
+    "@vitejs/plugin-react": "4.2.1",
+    "@vitest/ui": "0.34.7",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "cypress": "^12.11.0",
-    "eslint": "~8.15.0",
+    "eslint": "8.48.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-next": "13.4.1",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jest-formatting": "^3.1.0",
@@ -107,8 +109,8 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
-    "nx": "16.4.2",
-    "nx-cloud": "16.0.5",
+    "nx": "17.2.6",
+    "nx-cloud": "16.5.2",
     "postcss": "8.4.31",
     "prettier": "^2.6.2",
     "swc-loader": "0.1.15",
@@ -117,12 +119,12 @@
     "tailwindcss-logical": "^3.0.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3",
+    "typescript": "5.2.2",
     "verdaccio": "^5.0.4",
-    "vite": "^4.3.9",
+    "vite": "^5.0.0",
     "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.32.0"
+    "vitest": "0.34.6"
   },
   "nx": {
     "includedScripts": []
