fix: lint issue

--- a/libs/core-lib/project.json
+++ b/libs/core-lib/project.json
@@ -29,8 +29,7 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/libs/core-lib",
-        "generatePackageJson": true
+        "outputPath": "dist/libs/core-lib"
       },
       "configurations": {
         "development": {
