--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,10 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@okam/config": ["libs/shared/config/src/index.ts"],
       "@okam/core-lib": ["libs/core-lib/src/index.ts"],
       "@okam/directus-lib": ["libs/directus/lib/src/index.ts"],
-      "@okam/stack-ui": ["libs/stack-ui/src/index.ts"],
-      "@okam/directus/query": ["libs/directus/query/src/index.ts"]
+      "@okam/directus/query": ["libs/directus/query/src/index.ts"],
+      "@okam/stack-ui": ["libs/stack-ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
