feat: add gql query

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@react-aria/i18n": "^3.10.0",
     "@react-types/shared": "3.22.0",
     "@swc/helpers": "0.5.3",
+    "@tanstack/react-query": "^5.17.1",
     "@tsed/exceptions": "^7.52.0",
     "dequal": "^2.0.3",
+    "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "1.13.0",
     "lodash.isequal": "4.5.0",
     "next": "^14.0.4",
