--- a/libs/directus/directus-query/package.json
+++ b/libs/directus/directus-query/package.json
@@ -8,5 +8,9 @@
       "import": "./index.mjs",
       "require": "./index.js"
     }
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.10",
+    "tslib": "^2.6.2"
   }
 }
