--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "@graphql-eslint/eslint-plugin": "^3.20.1",
     "@nx/cypress": "17.2.6",
     "@nx/eslint-plugin": "17.2.6",
-    "@nx/jest": "17.2.6",
-    "@nx/js": "17.2.6",
+    "@nx/jest": "17.3.0",
+    "@nx/js": "17.3.0",
     "@nx/linter": "17.2.6",
+    "@nx/node": "^17.3.0",
     "@nx/react": "17.2.6",
     "@nx/rollup": "17.2.6",
     "@nx/storybook": "17.2.6",
