--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "storybook": "nx run stack-ui:storybook",
     "build-stack": "yarn nx run stack-ui:build:production",
     "build-core": "yarn nx run core-lib:build:production",
+    "build-directus-node": "yarn nx run directus-node:build:production",
     "publish-stack": "yarn npm publish --access public dist/libs/stack/stack-ui",
     "publish-core": "yarn npm publish --access public dist/libs/stack/core-lib",
+    "publish-directus-node": "yarn npm publish --access public dist/libs/directus/directus-node",
     "dev": "nx serve demo",
     "build": "nx build demo",
     "postinstall": "is-ci || yarn husky install"
