--- a/libs/directus/directus-node/package.json
+++ b/libs/directus/directus-node/package.json
@@ -1,4 +1,12 @@
 {
   "name": "@okam/directus-node",
-  "version": "0.0.1"
+  "main": "./index.js",
+  "version": "0.0.1",
+  "types": "./index.d.ts",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
+  "repository": {
+    "url": "https://github.com/OKAMca/stack.git"
+  }
 }
