--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,7 +21,7 @@
       "@okam/directus-next-component": ["libs/directus/directus-next-component/src/index.ts"],
       "@okam/directus-next-component/server": ["libs/directus/directus-next-component/src/server.ts"],
       "@okam/directus-node": ["libs/directus/directus-node/src/index.ts"],
-      "@okam/directus/directus-query": ["libs/directus/directus-query/src/index.ts"],
+      "@okam/directus-query": ["libs/directus/directus-query/src/index.ts"],
       "@okam/next-component": ["libs/stack/next-component/src/index.ts"],
       "@okam/next-component/server": ["libs/stack/next-component/src/server.ts"],
       "@okam/stack-ui": ["libs/stack/stack-ui/src/index.ts"]
