feat: add gql query (#73)
* feat: add gql query

* docs: add sample readme

* feat: add graphql codegen

* feat: make publishable

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build-stack": "yarn nx run stack-ui:build:production",
     "build-core": "yarn nx run core-lib:build:production",
     "build-directus-node": "yarn nx run directus-node:build:production",
+    "build-directus-query": "yarn nx run directus-query:build:production",
     "publish-stack": "yarn npm publish --access public dist/libs/stack/stack-ui",
     "publish-core": "yarn npm publish --access public dist/libs/stack/core-lib",
     "publish-directus-node": "yarn npm publish --access public dist/libs/directus/directus-node",
+    "publish-directus-query": "yarn npm publish --access public dist/libs/directus/directus-query",
     "dev": "nx serve demo",
     "build": "nx build demo",
     "postinstall": "is-ci || yarn husky install"
@@ -22,8 +24,10 @@
     "@react-aria/i18n": "^3.10.0",
     "@react-types/shared": "3.22.0",
     "@swc/helpers": "0.5.3",
+    "@tanstack/react-query": "^5.17.1",
     "@tsed/exceptions": "^7.52.0",
     "dequal": "^2.0.3",
+    "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "1.13.0",
     "lodash.isequal": "4.5.0",
     "next": "^14.0.4",
