--- a/libs/directus/directus-query/package.json
+++ b/libs/directus/directus-query/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stack-ui/directus/directus-query",
+  "name": "@okam/directus-query",
   "version": "0.0.1",
   "main": "./index.js",
   "types": "./index.d.ts",
