--- a/libs/stack/stack-ui/package.json
+++ b/libs/stack/stack-ui/package.json
@@ -14,5 +14,46 @@
   },
   "repository": {
     "url": "https://github.com/OKAMca/stack.git"
+  },
+  "dependencies": {
+    "@internationalized/date": "3.5.1",
+    "@okam/core-lib": "*",
+    "@react-aria/calendar": "3.5.4",
+    "@react-aria/checkbox": "3.13.0",
+    "@react-aria/datepicker": "3.9.1",
+    "@react-aria/focus": "^3.16.0",
+    "@react-aria/i18n": "^3.10.0",
+    "@react-aria/overlays": "3.20.0",
+    "@react-aria/tabs": "3.8.3",
+    "@react-aria/utils": "3.23.0",
+    "@react-aria/visually-hidden": "3.8.8",
+    "@react-stately/calendar": "3.4.3",
+    "@react-stately/checkbox": "3.6.1",
+    "@react-stately/collections": "3.10.4",
+    "@react-stately/datepicker": "3.9.1",
+    "@react-stately/overlays": "3.6.4",
+    "@react-stately/radio": "3.10.1",
+    "@react-stately/tabs": "3.6.3",
+    "@react-stately/toggle": "3.7.0",
+    "@react-types/dialog": "3.5.7",
+    "@react-types/radio": "3.7.0",
+    "@react-types/shared": "3.22.0",
+    "@react-types/tabs": "3.3.4",
+    "isomorphic-dompurify": "1.13.0",
+    "lodash": "4.17.21",
+    "lodash.isequal": "4.5.0",
+    "next": "^14.0.4",
+    "radash": "11.0.0",
+    "react": "^18.2.0",
+    "react-aria": "^3.31.0",
+    "react-div-100vh": "0.7.0",
+    "react-hook-form": "7.49.2",
+    "react-i18next": "13.5.0",
+    "react-spring": "^9.7.3",
+    "react-stately": "^3.29.0",
+    "swiper": "9.4.1",
+    "tailwind-variants": "^0.1.19",
+    "unlazy": "^0.10.2",
+    "usehooks-ts": "^2.9.1"
   }
 }
