--- a/libs/stack/stack-ui/project.json
+++ b/libs/stack/stack-ui/project.json
@@ -19,7 +19,11 @@
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/stack/stack-ui/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": [
+          "libs/stack/stack-ui/**/*.{ts,tsx,js,jsx}",
+          "libs/stack/stack-ui/package.json",
+          "libs/stack/stack-ui/project.json"
+        ]
       }
     },
     "build": {
