--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-aria/focus": "^3.16.0",
     "@react-aria/i18n": "^3.10.0",
     "@react-types/shared": "3.22.0",
+    "@storybook/addon-a11y": "^7.6.17",
     "@swc/helpers": "0.5.3",
     "@tanstack/react-query": "^5.17.1",
     "@tsed/exceptions": "^7.52.0",
@@ -131,7 +132,7 @@
     "vite": "^5.0.10",
     "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "^4.2.2",
-    "vitest": "1.1.0"
+    "vitest": ">=0.34.6"
   },
   "nx": {
     "includedScripts": []
