--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "private": true,
   "dependencies": {
     "@nx/next": "17.2.6",
+    "@react-aria/accordion": "^3.0.0-alpha.27",
     "@react-aria/focus": "^3.16.0",
     "@react-aria/i18n": "^3.10.0",
     "@react-types/shared": "3.22.0",
