--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@nx/next": "17.2.6",
     "@react-aria/focus": "^3.16.0",
     "@react-aria/i18n": "^3.10.0",
@@ -26,6 +27,7 @@
     "@swc/helpers": "0.5.3",
     "@tanstack/react-query": "^5.17.1",
     "@tsed/exceptions": "^7.52.0",
+    "ajv-errors": "^3.0.0",
     "dequal": "^2.0.3",
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "1.13.0",
@@ -90,6 +92,8 @@
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "~0.34.6",
     "@vitest/ui": "1.1.0",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "autoprefixer": "10.4.16",
     "babel-jest": "^29.7.0",
     "cypress": "^13.6.1",
