chore: add storybook to next-component

--- a/libs/stack/next-component/project.json
+++ b/libs/stack/next-component/project.json
@@ -28,6 +28,49 @@
           }
         ]
       }
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/stack/next-component/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/next-component",
+        "configDir": "libs/stack/next-component/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c libs/stack/next-component/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "next-component:build-storybook",
+        "staticFilePath": "dist/storybook/next-component"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "next-component:build-storybook:ci"
+        }
+      }
     }
   }
 }
