--- a/package.json
+++ b/package.json
@@ -63,15 +63,17 @@
     "@nx/rollup": "17.2.6",
     "@nx/storybook": "17.2.6",
     "@nx/vite": "17.2.6",
+    "@nx/web": "17.2.6",
     "@nx/workspace": "17.2.6",
     "@rollup/plugin-url": "^8.0.2",
-    "@storybook/addon-essentials": "^7.6.6",
+    "@storybook/addon-essentials": "7.6.17",
     "@storybook/addon-interactions": "^7.6.6",
     "@storybook/addon-links": "7.6.6",
     "@storybook/addon-styling": "^1.3.7",
-    "@storybook/core-server": "^7.6.6",
+    "@storybook/core-server": "7.6.17",
     "@storybook/jest": "^0.2.3",
     "@storybook/nextjs": "^7.6.6",
+    "@storybook/react-webpack5": "7.6.17",
     "@storybook/test-runner": "^0.16.0",
     "@storybook/testing-library": "^0.2.2",
     "@svgr/rollup": "^8.1.0",
@@ -93,6 +95,7 @@
     "@vitest/ui": "1.1.0",
     "autoprefixer": "10.4.16",
     "babel-jest": "^29.7.0",
+    "core-js": "^3.6.5",
     "cypress": "^13.6.1",
     "eslint": "8.56.0",
     "eslint-config-airbnb": "^19.0.4",
