--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "g:lint": "nx run-many --all --target=lint",
     "storybook": "nx run stack-ui:storybook",
+    "storybook-next-component": "nx run next-component:storybook",
     "build-stack": "yarn nx run stack-ui:build:production",
     "build-core": "yarn nx run core-lib:build:production",
     "build-directus-node": "yarn nx run directus-node:build:production",
