--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@swc/helpers": "0.5.3",
     "@tanstack/react-query": "^5.17.1",
     "@tsed/exceptions": "^7.52.0",
+    "babel-loader": "^9.1.3",
     "dequal": "^2.0.3",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
@@ -77,7 +78,7 @@
     "@storybook/addon-styling": "^1.3.7",
     "@storybook/core-server": "7.6.17",
     "@storybook/jest": "^0.2.3",
-    "@storybook/nextjs": "^7.6.6",
+    "@storybook/nextjs": "7.6.17",
     "@storybook/react-webpack5": "7.6.17",
     "@storybook/test-runner": "^0.16.0",
     "@storybook/testing-library": "^0.2.2",
