feat: init generators

--- a/libs/directus/directus-node/project.json
+++ b/libs/directus/directus-node/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/directus/directus-node/src",
   "projectType": "library",
+  "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
@@ -29,6 +30,5 @@
         "jestConfig": "libs/directus/directus-node/jest.config.ts"
       }
     }
-  },
-  "tags": []
+  }
 }
