--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@okam/automation": ["libs/automation/src/index.ts"],
       "@okam/config": ["libs/shared/config/src/index.ts"],
       "@okam/core-lib": ["libs/stack/core-lib/src/index.ts"],
       "@okam/directus-lib": ["libs/directus/directus-lib/src/index.ts"],
