fix: publishing for new libs

--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "build-core": "yarn nx run core-lib:build:production",
     "build-directus-node": "yarn nx run directus-node:build:production",
     "build-directus-query": "yarn nx run directus-query:build:production",
+    "build-directus-block": "yarn nx run directus-block:build:production",
+    "build-directus-next-component": "yarn nx run directus-next-component:build:production",
+    "build-next-component": "yarn nx run next-component:build:production",
     "publish-stack": "yarn npm publish --access public dist/libs/stack/stack-ui",
     "publish-core": "yarn npm publish --access public dist/libs/stack/core-lib",
     "publish-directus-node": "yarn npm publish --access public dist/libs/directus/directus-node",
     "publish-directus-query": "yarn npm publish --access public dist/libs/directus/directus-query",
+    "publish-directus-block": "yarn npm publish --access public dist/libs/directus/directus-block",
+    "publish-directus-next-component": "yarn npm publish --access public dist/libs/directus/directus-next-component",
+    "publish-next-component": "yarn npm publish --access public dist/libs/stack/next-component",
     "dev": "nx serve demo",
     "build": "nx build demo",
     "postinstall": "is-ci || yarn husky install"
