--- a/package.json
+++ b/package.json
@@ -6,33 +6,33 @@
     "g:lint": "nx run-many --all --target=lint",
     "storybook": "nx run stack-ui:storybook",
     "storybook-next-component": "nx run next-component:storybook",
-    "build-stack": "yarn nx run stack-ui:build:production",
-    "build-core": "yarn nx run core-lib:build:production",
-    "build-directus-node": "yarn nx run directus-node:build:production",
-    "build-directus-query": "yarn nx run directus-query:build:production",
-    "build-directus-block": "yarn nx run directus-block:build:production",
-    "build-directus-next-component": "yarn nx run directus-next-component:build:production",
-    "build-next-component": "yarn nx run next-component:build:production",
-    "publish-stack": "yarn npm publish --access public dist/libs/stack/stack-ui",
-    "publish-core": "yarn npm publish --access public dist/libs/stack/core-lib",
-    "publish-directus-node": "yarn npm publish --access public dist/libs/directus/directus-node",
-    "publish-directus-query": "yarn npm publish --access public dist/libs/directus/directus-query",
-    "publish-directus-block": "yarn npm publish --access public dist/libs/directus/directus-block",
-    "publish-directus-next-component": "yarn npm publish --access public dist/libs/directus/directus-next-component",
-    "publish-next-component": "yarn npm publish --access public dist/libs/stack/next-component",
+    "build-stack": "npx nx run stack-ui:build:production",
+    "build-core": "npx nx run core-lib:build:production",
+    "build-directus-node": "npx nx run directus-node:build:production",
+    "build-directus-query": "npx nx run directus-query:build:production",
+    "build-directus-block": "npx nx run directus-block:build:production",
+    "build-directus-next-component": "npx nx run directus-next-component:build:production",
+    "build-next-component": "npx nx run next-component:build:production",
+    "publish-stack": "npx npm publish --access public dist/libs/stack/stack-ui",
+    "publish-core": "npx npm publish --access public dist/libs/stack/core-lib",
+    "publish-directus-node": "npx npm publish --access public dist/libs/directus/directus-node",
+    "publish-directus-query": "npx npm publish --access public dist/libs/directus/directus-query",
+    "publish-directus-block": "npx npm publish --access public dist/libs/directus/directus-block",
+    "publish-directus-next-component": "npx npm publish --access public dist/libs/directus/directus-next-component",
+    "publish-next-component": "npx npm publish --access public dist/libs/stack/next-component",
     "dev": "nx serve demo",
     "build": "nx build demo",
-    "postinstall": "is-ci || yarn husky install"
+    "postinstall": "is-ci || npx husky install"
   },
   "private": true,
   "dependencies": {
-    "@nx/next": "17.2.6",
+    "@nx/next": "19.3.1",
     "@react-aria/accordion": "^3.0.0-alpha.27",
     "@react-aria/focus": "^3.16.0",
     "@react-aria/i18n": "^3.10.0",
     "@react-types/shared": "3.22.0",
     "@storybook/addon-a11y": "^7.6.17",
-    "@swc/helpers": "0.5.3",
+    "@swc/helpers": "0.5.11",
     "@tanstack/react-query": "^5.17.1",
     "@tsed/exceptions": "^7.52.0",
     "babel-loader": "^9.1.3",
@@ -41,12 +41,12 @@
     "graphql-request": "^6.1.0",
     "isomorphic-dompurify": "1.13.0",
     "lodash.isequal": "4.5.0",
-    "next": "^14.0.4",
+    "next": "14.2.3",
     "radash": "11.0.0",
-    "react": "^18.2.0",
+    "react": "18.3.1",
     "react-aria": "^3.32.0",
     "react-div-100vh": "0.7.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.3.1",
     "react-hook-form": "7.49.2",
     "react-i18next": "13.5.0",
     "react-spring": "^9.7.3",
@@ -57,8 +57,7 @@
     "tailwind-variants": "^0.1.19",
     "tslib": "^2.6.2",
     "unlazy": "^0.10.2",
-    "usehooks-ts": "^2.9.1",
-    "yarn": "^1.22.21"
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -66,19 +65,19 @@
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
     "@graphql-eslint/eslint-plugin": "^3.20.1",
-    "@nx/cypress": "17.2.6",
-    "@nx/eslint-plugin": "17.2.6",
-    "@nx/jest": "17.3.0",
-    "@nx/js": "17.3.0",
-    "@nx/linter": "17.2.6",
-    "@nx/node": "^17.3.0",
-    "@nx/react": "17.2.6",
-    "@nx/rollup": "17.2.6",
-    "@nx/storybook": "17.2.6",
-    "@nx/vite": "17.2.6",
-    "@nx/web": "17.2.6",
-    "@nx/workspace": "17.2.6",
-    "@rollup/plugin-url": "^8.0.2",
+    "@nx/cypress": "19.3.1",
+    "@nx/eslint-plugin": "19.3.1",
+    "@nx/jest": "19.3.1",
+    "@nx/js": "19.3.1",
+    "@nx/linter": "19.3.1",
+    "@nx/node": "19.3.1",
+    "@nx/react": "19.3.1",
+    "@nx/rollup": "19.3.1",
+    "@nx/storybook": "19.3.1",
+    "@nx/vite": "19.3.1",
+    "@nx/web": "19.3.1",
+    "@nx/workspace": "19.3.1",
+    "@rollup/plugin-url": "8.0.2",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addon-interactions": "^7.6.6",
     "@storybook/addon-links": "7.6.6",
@@ -89,31 +88,31 @@
     "@storybook/react-webpack5": "7.6.17",
     "@storybook/test-runner": "^0.16.0",
     "@storybook/testing-library": "^0.2.2",
-    "@svgr/rollup": "^8.1.0",
-    "@swc-node/register": "~1.6.7",
-    "@swc/cli": "~0.1.63",
-    "@swc/core": "1.3.101",
+    "@svgr/rollup": "8.1.0",
+    "@swc-node/register": "1.9.2",
+    "@swc/cli": "0.3.14",
+    "@swc/core": "1.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@testing-library/react": "14.1.2",
+    "@testing-library/react": "15.0.6",
     "@theunderscorer/nx-semantic-release": "^2.8.0",
     "@types/jest": "^29.5.11",
     "@types/lodash.isequal": "4.5.8",
-    "@types/node": "20.10.5",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
-    "@typescript-eslint/eslint-plugin": "6.15.0",
-    "@typescript-eslint/parser": "6.15.0",
+    "@types/node": "18.16.9",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
     "@vitejs/plugin-react": "4.2.1",
-    "@vitest/coverage-v8": "~0.34.6",
-    "@vitest/ui": "1.1.0",
+    "@vitest/coverage-v8": "1.6.0",
+    "@vitest/ui": "1.6.0",
     "autoprefixer": "10.4.16",
     "babel-jest": "^29.7.0",
-    "core-js": "^3.6.5",
-    "cypress": "^13.6.1",
-    "eslint": "8.56.0",
+    "core-js": "3.36.1",
+    "cypress": "13.9.0",
+    "eslint": "8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "17.1.0",
-    "eslint-config-next": "^14.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-cypress": "2.15.1",
@@ -134,22 +133,22 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jsdom": "~23.0.1",
-    "nx": "17.2.6",
-    "nx-cloud": "16.5.2",
-    "postcss": "8.4.32",
+    "nx": "19.3.1",
+    "nx-cloud": "19.0.0",
+    "postcss": "8.4.38",
     "prettier": "^3.1.1",
     "slugify": "1.6.6",
     "swc-loader": "0.2.3",
-    "tailwindcss": "3.4.0",
+    "tailwindcss": "3.4.3",
     "tailwindcss-logical": "^3.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.2",
-    "typescript": "5.3.3",
+    "typescript": "5.4.5",
     "verdaccio": "^5.29.0",
     "vite": "^5.0.10",
     "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "^4.2.2",
-    "vitest": ">=0.34.6"
+    "vitest": "1.6.0"
   },
   "nx": {
     "includedScripts": []
