--- a/package.json
+++ b/package.json
@@ -30,6 +30,29 @@
     "@storybook/addon-a11y": "^7.6.17",
     "@swc/helpers": "0.5.3",
     "@tanstack/react-query": "^5.17.1",
+    "@tiptap/core": "^2.4.0",
+    "@tiptap/extension-blockquote": "^2.4.0",
+    "@tiptap/extension-bold": "^2.4.0",
+    "@tiptap/extension-bullet-list": "^2.4.0",
+    "@tiptap/extension-code": "^2.4.0",
+    "@tiptap/extension-code-block": "^2.4.0",
+    "@tiptap/extension-document": "^2.4.0",
+    "@tiptap/extension-hard-break": "^2.4.0",
+    "@tiptap/extension-heading": "^2.4.0",
+    "@tiptap/extension-horizontal-rule": "^2.4.0",
+    "@tiptap/extension-italic": "^2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
+    "@tiptap/extension-list-item": "^2.4.0",
+    "@tiptap/extension-ordered-list": "^2.4.0",
+    "@tiptap/extension-paragraph": "^2.4.0",
+    "@tiptap/extension-strike": "^2.4.0",
+    "@tiptap/extension-table": "^2.4.0",
+    "@tiptap/extension-table-cell": "^2.4.0",
+    "@tiptap/extension-table-header": "^2.4.0",
+    "@tiptap/extension-table-row": "^2.4.0",
+    "@tiptap/extension-text": "^2.4.0",
+    "@tiptap/extension-text-align": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
     "@tsed/exceptions": "^7.52.0",
     "dequal": "^2.0.3",
     "graphql": "^16.8.1",
